// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditOntologyRestoreNode should match snapshot when type edge and no options 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  mapToProps={[Function]}
  operation="restore"
  optionEdges={Array []}
  optionNodes={Array []}
  type="edge"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`EditOntologyRestoreNode should match snapshot when type node and no options 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  mapToProps={[Function]}
  operation="restore"
  optionEdges={Array []}
  optionNodes={Array []}
  type="node"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`EditOntologyRestoreNode should match snapshot when type node and options 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  mapToProps={[Function]}
  operation="restore"
  optionEdges={Array []}
  optionNodes={
    Array [
      Object {
        "label": "Test",
        "value": "http://test.test/test",
      },
    ]
  }
  type="node"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;
